--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="theme-color" content="#0b0f13" />
-  <title>BARBOUR BRBR — Global Youth. Global Hope.</title>
-  <meta name="description" content="BARBOUR BRBR is a meme coin with a serious mission: build a supportive web for youth, promote community action, and fund awareness initiatives." />
+  <title> BRBR Token — Global Youth. Global Hope.</title>
+  <meta name="description" content="BRBR Token is a meme coin with a serious mission: build a supportive web for youth, promote community action, and fund awareness initiatives." />
   <link rel="canonical" href="https://barbourbrbr.xyz/" />
 
   <!-- Open Graph -->
-  <meta property="og:title" content="BARBOUR BRBR — Global Youth. Global Hope." />
+  <meta property="og:title" content="BRBR — Global Youth. Global Hope." />
   <meta property="og:description" content="A meme coin with a serious mission: supportive web, community-first, and real impact." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://barbourbrbr.xyz/" />
@@ -347,7 +347,7 @@
           </div>
 
           <div class="fineprint">
-            Anti-spam note: we use email obfuscation + a honeypot on forms. For advanced protection, consider Cloudflare Turnstile if you add a backend form.
+      
           </div>
         </div>
 
