--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="theme-color" content="#0b0f13" />
-  <title> BRBR Token — Global Youth. Global Hope.</title>
-  <meta name="description" content="BRBR Token is a meme coin with a serious mission: build a supportive web for youth, promote community action, and fund awareness initiatives." />
+  <title> BRBR — Global Youth. Global Hope.</title>
+  <meta name="description" content="BRBR is a meme coin with a serious mission: build a supportive web for youth, promote community action, and fund awareness initiatives." />
   <link rel="canonical" href="https://barbourbrbr.xyz/" />
 
   <!-- Open Graph -->
@@ -27,7 +27,7 @@
     <div class="topbar__inner">
       <a class="brand" href="#top" aria-label="Barbour BRBR Home">
         <span class="brand__dot"></span>
-        <span class="brand__name">BARBOUR BRBR</span>
+        <span class="brand__name">BRBR</span>
       </a>
 
       <nav class="nav" id="nav">
@@ -115,7 +115,7 @@
           <div class="card__kicker">THE SILENCE OF FEAR</div>
           <h2 class="card__title">A real story. A real mission.</h2>
           <p class="card__text">
-            BARBOUR BRBR is a <strong>meme coin</strong> with a serious vision:
+            BRBR is a <strong>meme coin</strong> with a serious vision:
             build a supportive web for youth, promote community action, and fund awareness initiatives.
           </p>
 
@@ -387,7 +387,7 @@
         <div>
           <div class="footer__brand">
             <span class="brand__dot"></span>
-            <strong>BARBOUR BRBR</strong>
+            <strong>BRBR</strong>
           </div>
           <div class="footer__muted">Global Youth. Global Hope.</div>
         </div>
@@ -399,7 +399,7 @@
         </div>
 
         <div class="footer__muted">
-          © <span id="year"></span> BARBOUR BRBR. All rights reserved.
+          © <span id="year"></span> BRBR. All rights reserved.
         </div>
       </div>
     </footer>
