--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         </div>
 
         <div class="poster reveal" aria-label="Story Poster">
-          <img src="assets/story.png" alt="BARBOUR BRBR — The Silence of Fear / Break the Chain / Build Hope" />
+          <img src="assets/story.png" alt="BRBR — The Silence of Fear / Break the Chain / Build Hope" />
           <div class="poster__glow" aria-hidden="true"></div>
         </div>
       </div>
