--- a/whitepaper.html
+++ b/whitepaper.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="theme-color" content="#0b0f13" />
-  <title>BRBR Whitepaper — BARBOUR BRBR</title>
-  <meta name="description" content="BRBR Whitepaper — meme coin with a serious mission: supportive web, community-first governance, and awareness initiatives." />
+  <title>BRBRT Whitepaper — BRBRT</title>
+  <meta name="description" content="BRBRT Whitepaper — meme coin with a serious mission: supportive web, community-first governance, and awareness initiatives." />
   <link rel="canonical" href="https://barbourbrbr.xyz/whitepaper.html" />
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -16,7 +16,7 @@
     <div class="topbar__inner">
       <a class="brand" href="index.html">
         <span class="brand__dot"></span>
-        <span class="brand__name">BARBOUR BRBR</span>
+        <span class="brand__name">BRBRT</span>
       </a>
 
       <nav class="nav" id="nav">
@@ -44,7 +44,7 @@
     <section class="section">
       <div class="section__head reveal">
         <div class="section__kicker">WHITEPAPER</div>
-        <h1 class="section__title">BARBOUR BRBR (BRBR)</h1>
+        <h1 class="section__title">BRBRT</h1>
         <p class="section__subtitle">
           BRBR is a <strong>meme coin</strong> with a serious mission: build a supportive web for youth,
           promote community action, and fund awareness initiatives.
@@ -72,7 +72,7 @@
         <div class="card__kicker">VISION</div>
         <h2 class="card__titleSm">Global Youth. Global Hope.</h2>
         <p class="card__text">
-          The BRBR mission is to help transform silence into strength — with a supportive web experience that promotes:
+          The BRBRT mission is to help transform silence into strength — with a supportive web experience that promotes:
           safe resources, community awareness, and progressive real-world impact.
         </p>
         <p class="card__text">
@@ -82,9 +82,9 @@
       </div>
 
       <div class="card glass reveal">
-        <div class="card__kicker">WHAT BRBR IS</div>
+        <div class="card__kicker">WHAT BRBRT IS</div>
         <p class="card__text">
-          BRBR is a <strong>meme coin</strong>. The purpose of BRBR is community movement and awareness.
+          BRBRT is a <strong>meme coin</strong>. The purpose of BRBRT is community movement and awareness.
           Nothing on this site is an investment solicitation. Always verify on-chain and use official links only.
         </p>
       </div>
@@ -107,7 +107,7 @@
       <div class="card glass reveal">
         <div class="card__kicker">RISKS & DISCLAIMER</div>
         <p class="card__text">
-          Crypto assets can be highly volatile. BRBR is a meme coin. You can lose funds. This site is informational and
+          Crypto assets can be highly volatile. BRBRT is a meme coin. You can lose funds. This site is informational and
           provides no financial advice. Always do your own research and verify official sources.
         </p>
       </div>
@@ -130,7 +130,7 @@
   <footer class="footer">
     <div class="container footer__inner">
       <div>
-        <div class="footer__brand"><span class="brand__dot"></span><strong>BARBOUR BRBR</strong></div>
+        <div class="footer__brand"><span class="brand__dot"></span><strong>BRBRT</strong></div>
         <div class="footer__muted">Global Youth. Global Hope.</div>
       </div>
       <div class="footer__links">
@@ -138,7 +138,7 @@
         <a href="privacy.html">Privacy</a>
         <a href="index.html#contact">Contact</a>
       </div>
-      <div class="footer__muted">© <span id="year"></span> BARBOUR BRBR. All rights reserved.</div>
+      <div class="footer__muted">© <span id="year"></span> BRBRT. All rights reserved.</div>
     </div>
   </footer>
 
