--- a/association.html
+++ b/association.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="theme-color" content="#0b0f13" />
-  <title>Association — BARBOUR BRBR</title>
-  <meta name="description" content="BARBOUR BRBR Association — community-first mission, supportive web, awareness, and long-term impact." />
+  <title>Association — BRBRT</title>
+  <meta name="description" content="BRBRT Association — community-first mission, supportive web, awareness, and long-term impact." />
   <link rel="canonical" href="https://barbourbrbr.xyz/association.html" />
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -16,7 +16,7 @@
     <div class="topbar__inner">
       <a class="brand" href="index.html">
         <span class="brand__dot"></span>
-        <span class="brand__name">BARBOUR BRBR</span>
+        <span class="brand__name">BRBRT</span>
       </a>
 
       <nav class="nav" id="nav">
@@ -57,7 +57,7 @@
         <div class="card glass reveal">
           <div class="card__kicker">MISSION</div>
           <p class="card__text">
-            BRBR aims to create a supportive web experience: educational resources, awareness initiatives,
+            BRBRT aims to create a supportive web experience: educational resources, awareness initiatives,
             and safe community action. The goal is to reduce isolation and promote real help.
           </p>
 
@@ -96,7 +96,7 @@
             <a href="https://bscscan.com/token/0xf97522ABEf762d28729E073019343b72C6e8D2C1" target="_blank" rel="noopener noreferrer">Token Explorer</a><br/>
             PancakeSwap:
             <a href="https://pancakeswap.finance/swap?outputCurrency=0xf97522ABEf762d28729E073019343b72C6e8D2C1&chain=bsc"
-               target="_blank" rel="noopener noreferrer">Buy BRBR</a>
+               target="_blank" rel="noopener noreferrer">Buy BRBRT</a>
           </p>
 
           <div class="divider"></div>
@@ -125,7 +125,7 @@
   <footer class="footer">
     <div class="container footer__inner">
       <div>
-        <div class="footer__brand"><span class="brand__dot"></span><strong>BARBOUR BRBR</strong></div>
+        <div class="footer__brand"><span class="brand__dot"></span><strong>BRBRT</strong></div>
         <div class="footer__muted">Global Youth. Global Hope.</div>
       </div>
       <div class="footer__links">
@@ -133,7 +133,7 @@
         <a href="privacy.html">Privacy</a>
         <a href="index.html#contact">Contact</a>
       </div>
-      <div class="footer__muted">© <span id="year"></span> BARBOUR BRBR. All rights reserved.</div>
+      <div class="footer__muted">© <span id="year"></span> BRBRT. All rights reserved.</div>
     </div>
   </footer>
 
